--- a/user_settings.json
+++ b/user_settings.json
@@ -1,1 +1,136 @@
-
+{
+    "5727581556": {
+        "urls": [
+            "https://suchen.mobile.de/fahrzeuge/search.html?dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srpHead&refId=b49bd542-af20-60f9-2364-09e66e92aaa3&s=Car&sb=doc&vc=Car"
+        ],
+        "interval": 1,
+        "cars": [
+            [
+                "NEU\nVolkswagen Passat Variant\nGTE NAVI*LEDER*MTL*CAM*PDC*AHK*",
+                "14.980 \u20ac",
+                "115 kW (156 PS)",
+                "143.000 km",
+                "Hybrid (Benzin/Elektro)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=415877523&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "NEU\nVolkswagen Passat Variant\nGTE 115KW Plug-in",
+                "11.480 \u20ac",
+                "183.000 km",
+                "EZ 02/2016",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=415840506&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\nGTE 1.4 Hybrid Navi DSG 2.Hand",
+                "13.999 \u20ac",
+                "181.000 km",
+                "EZ 02/2018",
+                "160 kW (218 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=415587666&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\nGTE HYBRID Garantie",
+                "15.000 \u20ac",
+                "157.000 km",
+                "EZ 04/2016",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=415527348&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\n1.4 TSI DSG GTE *PANO*LED*ACC*",
+                "15.450 \u20ac",
+                "188.867 km",
+                "EZ 12/2019",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=414820833&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat\n1.4 TSI PHEV GTE KLIMA, NAVI, CAM, PANO",
+                "15.488 \u20ac",
+                "196.902 km",
+                "EZ 01/2020",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=410926325&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\n1.4 TSI GTE Virtual Cockpit Nav/C",
+                "15.324 \u20ac",
+                "Hybrid (Benzin/Elektro)",
+                "189.625 km",
+                "\u041d\u0435 \u0437\u043d\u0430\u0439\u0434\u0435\u043d\u043e",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=413289702&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\nPASSAT VARIANT GTE LED NAVI ACC DCC SCHECKH.",
+                "14.995 \u20ac",
+                "185.630 km",
+                "EZ 05/2017",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=412984553&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\nGTE",
+                "14.590 \u20ac",
+                "106.542 km",
+                "EZ 01/2017",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=367034830&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\n1.4 TSI GTE Connected Series | \u20ac",
+                "11.700 \u20ac",
+                "160 kW (218 PS)",
+                "196.696 km",
+                "Hybrid (Benzin/Elektro)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=410610896&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat\nVariant 1.4 TSI Plug-In Hybrid GTE Navi",
+                "14.680 \u20ac",
+                "160 kW (218 PS)",
+                "159.663 km",
+                "Hybrid (Benzin/Elektro)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=410496535&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat\n1.4 TSI DSG GTE",
+                "13.950 \u20ac",
+                "156.000 km",
+                "EZ 07/2017",
+                "160 kW (218 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=401762526&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&s=Car&sb=doc&searchId=22eef4ec-6a8a-e832-55c5-df45ebd7d3f2&vc=Car"
+            ],
+            [
+                "Volkswagen Passat Variant\nGTE OPF , 1.4 TSI Plug-In Hybrid",
+                "14.999 \u20ac",
+                "174.000 km",
+                "EZ 12/2019",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=415541307&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=7ae76726-c211-dbd5-e577-a5337f35b758&s=Car&sb=doc&searchId=7ae76726-c211-dbd5-e577-a5337f35b758&vc=Car"
+            ],
+            [
+                "Gesponsert\nVolkswagen Passat Variant\nGTE",
+                "14.300 \u20ac",
+                "185.000 km",
+                "EZ 05/2018",
+                "115 kW (156 PS)",
+                "https://suchen.mobile.de/fahrzeuge/details.html?id=410845724&action=topOfPage&dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srp&refId=8fc2892f-9365-deb9-0f5e-3ff5440028c9&s=Car&sb=doc&searchId=8fc2892f-9365-deb9-0f5e-3ff5440028c9&vc=Car"
+            ]
+        ]
+    },
+    "6506929310": {
+        "urls": [
+            "https://suchen.mobile.de/fahrzeuge/search.html?dam=false&fr=2015%3A&ft=HYBRID&isSearchRequest=true&ml=%3A200000&ms=25200%3B%3B37%3B&od=down&p=%3A15500&ref=srpHead&refId=b49bd542-af20-60f9-2364-09e66e92aaa3&s=Car&sb=doc&vc=Car"
+        ],
+        "interval": 1,
+        "cars": []
+    },
+    "508550563": {
+        "urls": [
+            "https://suchen.mobile.de/auto/volkswagen-hybrid-benzin-elektro.html"
+        ],
+        "interval": 1,
+        "cars": []
+    }
+}
